[package]
name = "git-explore"
version = '0.1.1'
author = "805104533@qq.com"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Tool for version control with multi git repo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "^2.3.2"
auto_from = "^0.3.0"
git2 = "^0.15.0  "
toml = "^0.5.9"
semver = "^1.0.14"
sedregex = "^0.2.5"
cargo_metadata = "0.15.0"
chrono = "0.4.22"
anyhow = "1.0.66"
[dependencies.clap]
version = "=4.0.17"
features = ["derive", "cargo","env"]

[dependencies.serde]
version = "^1.0.145"
features = ["derive"]

[dev_dependencies]
insta = "^1.21.0"